# Project Lifecycle Diagram Template

## Basic Lifecycle
```mermaid
graph LR
    A[🌱 Started] --> B[🌿 Active]
    B --> C[🌳 Review]
    C --> D[🍃 Complete]
    style B fill:#90EE90
```

## With Phases
```mermaid
graph TD
    Start[Project Initiated] --> Planning[Planning Phase]
    Planning --> Execution[Execution Phase]
    Execution --> Review[Review Phase]
    Review --> Complete[Project Complete]
    
    Planning --> |Issues Found| Revision[Revise Plan]
    Revision --> Planning
    
    style Execution fill:#90EE90
```

## Status Flow
```mermaid
stateDiagram-v2
    [*] --> Discussion
    Discussion --> Ready: User signals readiness
    Ready --> Active: Documents created
    Active --> Review: Work complete
    Review --> Done: Approved
    Review --> Active: Changes needed
    Done --> [*]
```